--- a/JS-Flies/Module-1/index.html
+++ b/JS-Flies/Module-1/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <p id="greeting"></p>
+  <p id="sum"></p>
+  <p id="avre"></p>
+  <p id="task-3"></p>
 
 
   <script src="index.js" defer></script>
